--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <title>Home</title>
+<head>
+    <link rel="icon" href="images/u.jpg" type="image/jpg" sizes="16x16">
+</head>
 <style>
 body, html {
     height: 100%;
