--- a/myresume.html
+++ b/myresume.html
@@ -338,7 +338,7 @@ p {
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: uday.karkera@gmail.com">uday.karkera@gmail.com</a></li>
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:09819131365">09819131365</a> (Ban)</li>
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:09821592988">09821592988</a> (Mum)</li>
-                    <li class="website"><i class="fa fa-globe"></i><a href="https://udaykarkera.github.io">udaykarkera.github.io</a></li>
+                    <li class="website"><i class="fa fa-globe"></i><a href="https://udaykarkera.github.io/">udaykarkera.github.io</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://in.linkedin.com/in/udaykarkera" target="_blank">linkedin.com/in/udaykarkera</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="https://github.com/udaykarkera" target="_blank">github.com/udaykarkera</a></li>
                     <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/karkera_uday" target="_blank">@karkera_uday</a></li>
