add stripe to resume

--- a/myresume.html
+++ b/myresume.html
@@ -507,7 +507,7 @@ p {
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Payment Gateways</span>:  
-                    <span class="project-tagline">PayPal, CCAvenue, Wirecard</span>
+                    <span class="project-tagline">PayPal, CCAvenue, Stripe, Wirecard</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Web Services</span>:  
