--- a/myresume.html
+++ b/myresume.html
@@ -327,7 +327,8 @@ p {
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile img-circle" height="100px" width="100px" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAeaAAAAJGY5ZjRjZGFmLWJmZDgtNDZiZC1iMTVlLWUyMDc3MzRhYTAzNg.jpg" alt="">
+                <!-- <img class="profile img-circle" height="100px" width="100px" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAeaAAAAJGY5ZjRjZGFmLWJmZDgtNDZiZC1iMTVlLWUyMDc3MzRhYTAzNg.jpg" alt=""> -->
+                <img class="profile img-circle" height="120px" width="110px" src="images/formal-2.jpg" alt="">
                 <h4>Uday Karkera</h4>
                 <h3 class="tagline">Full Stack Developer</h3>
                 <h4>4 Years Exp</h4>
@@ -347,22 +348,22 @@ p {
             <div class="education-container container-block">
                 <h2 class="container-block-title">Education</h2>
                 <div class="item">
-                    <h4 class="degree">BSc in Information Technology with 53%</h4>
+                    <h4 class="degree">BSc in Information Technology</h4>
                     <h5 class="meta">Mumbai University</h5>
                     <div class="time">2010 - 2013</div>
                 </div><!--//item-->
                 <div class="item">
-                    <h4 class="degree">Aircraft Maintenance Engineering with 77%</h4>
+                    <h4 class="degree">Aircraft Maintenance Engineering</h4>
                     <h5 class="meta">Bombay Flying Club, Juhu</h5>
                     <div class="time">2006 - 2009</div>
                 </div><!--//item-->
                 <div class="item">
-                    <h4 class="degree">H.S.C. Examination with 66%</h4>
+                    <h4 class="degree">H.S.C. Examination</h4>
                     <h5 class="meta">Gokuldham High School &amp; Jr. College, Goregaon</h5>
                     <div class="time">2004 - 2006</div>
                 </div>
                 <div class="item">
-                    <h4 class="degree">S.S.C. Examination with 58%</h4>
+                    <h4 class="degree">S.S.C. Examination</h4>
                     <h5 class="meta">Yashodham High School, Goregaon</h5>
                     <div class="time">2004</div>
                 </div>
