change img look

--- a/myresume.html
+++ b/myresume.html
@@ -328,7 +328,7 @@ p {
         <div class="sidebar-wrapper">
             <div class="profile-container">
                 <!-- <img class="profile img-circle" height="100px" width="100px" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAeaAAAAJGY5ZjRjZGFmLWJmZDgtNDZiZC1iMTVlLWUyMDc3MzRhYTAzNg.jpg" alt=""> -->
-                <img class="profile img-circle" height="120px" width="120px" src="https://udaykarkera.github.io/images/formal-2.jpg" alt="">
+                <img style="height: 120px;width: 120px;border-radius: 5px;" src="https://media.licdn.com/dms/image/C5103AQFHWJRKQy1ttg/profile-displayphoto-shrink_200_200/0?e=1526810400&v=alpha&t=jn4N0dXA23ug508Es3AIyWlVauov61wIJfriL9AKxN4" alt="">
                 <h4>Uday Karkera</h4>
                 <h3 class="tagline">Full Stack Developer</h3>
                 <h4>4 Years Exp</h4>
