--- a/myresume.html
+++ b/myresume.html
@@ -331,7 +331,7 @@ p {
                 <img style="height: 120px;width: 120px;border-radius: 30px;" src="https://media.licdn.com/dms/image/C5103AQFHWJRKQy1ttg/profile-displayphoto-shrink_200_200/0?e=1526810400&v=alpha&t=jn4N0dXA23ug508Es3AIyWlVauov61wIJfriL9AKxN4" alt="">
                 <h4>Uday Karkera</h4>
                 <h3 class="tagline">Full Stack Developer</h3>
-                <h4>4 Years Exp</h4>
+                <h4>4+ Years Exp</h4>
             </div><!--//profile-container-->
 
             <div class="contact-container container-block">
@@ -399,7 +399,7 @@ p {
             </div>
         </div><!--//sidebar-wrapper-->
         
-        <div class="main-wrapper">
+        <div class="main-wrapper" style="border-radius: 40px;">
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
