border radius haha

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ a:hover, a:active {
     <p id="demo" style="font-size:30px"></p>
   </div>
   <div class="bottomleft">
-    <p><a href="myresume.html">My Resume</a></p>
+    <p><a style="border-radius: 30px;font-size: 20px"  href="myresume.html">My Resume</a></p>
   </div>
 </div>
 
