senior software engg and cover letter doc

--- a/myresume.html
+++ b/myresume.html
@@ -407,12 +407,16 @@ p {
                 </div><!--//summary-->
             </section><!--//section-->
             <section class="section experiences-section">
-                <h2 class="section-title"><i class="fa fa-briefcase"></i>Experiences</h2>
+                <h2 class="section-title"><i class="fa fa-briefcase"></i>Experience</h2>
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
+                            <h3 class="job-title">Sr. Software Engineer</h3>
+                            <div class="time">Apr 2018 - Present</div>
+                        </div>
+                        <div class="upper-row">
                             <h3 class="job-title">Software Engineer</h3>
-                            <div class="time">Mar 2017 - Present</div>
+                            <div class="time">Apr 2017 - Mar 2018</div>
                         </div><!--//upper-row-->
                         <div class="company">MobiCom, Bengaluru</div>
                     </div><!--//meta-->
