--- a/myresume.html
+++ b/myresume.html
@@ -411,7 +411,7 @@ p {
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Sr. Software Engineer</h3>
+                            <h3 class="job-title">Senior Software Engineer</h3>
                             <div class="time">Apr 2018 - Present</div>
                         </div>
                         <div class="upper-row">
