--- a/myresume.html
+++ b/myresume.html
@@ -506,6 +506,10 @@ p {
                     <span class="project-tagline">Jquery<!-- , AngularJS, ReactJS --></span>
                 </div><!--//item-->
                 <div class="item">
+                    <span class="skills-title company">Databases</span>:
+                    <span class="project-tagline">MySQL</span>
+                </div><!--//item-->
+                <div class="item">
                     <span class="skills-title company">PHP Frontend Frameworks / Templating Engines</span>:  
                     <span class="project-tagline">Blade, Twig</span>
                 </div><!--//item-->
@@ -554,7 +558,18 @@ p {
                 <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
                 <div class="company">MobiCom Technologies Pvt Ltd, Bengaluru</div>
                 <div class="item">
-                    <span class="project-title"><a href="http://onecardnet.com/" target="_blank">OneCardNet</a></span>: <span class="project-tagline">OneCardNet provides Bank card holders a platform to shop, dine, etc with different offers</span>
+                    <span class="project-title"><a href="https://platinumclubnet.com/" target="_blank">PlatinumClubNet</a></span>:
+                    <span class="project-tagline">PlatinumClubNet enables members of Platinum Clubs® of America and Platinum Clubs® of the World to engage, network and create new experiences, enhancing value, benefits and relationships.</span>
+                    <ul>
+                        <li>Maitainance &amp; Optimistation of the CMS and Apis</li>
+                        <li>Implement Laravel features.</li>
+                        <li>Payment Gateway (Stripe)</li>
+                        <li>Monitoring technical aspects of PlatinumClubNet</li>
+                        <li>Handling complete git processes</li>
+                    </ul>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="project-title"><a href="http://onecardnet.com/" target="_blank">OneCardNet (MVP)</a></span>: <span class="project-tagline">OneCardNet provides Bank card holders a platform to shop, dine, etc with different offers</span>
                     <ul>
                         <li>Designed from "scratch".</li>
                         <li>Maitainance &amp; Optimistation of the Web and Apis</li>
