--- a/myresume.html
+++ b/myresume.html
@@ -466,9 +466,9 @@ p {
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
                     <div class="item">
-                        <h3 class="level-title">MySQL</h3><h3 class="level-title" style="width: 10%">7/10</h3>
+                        <h3 class="level-title">Laravel</h3><h3 class="level-title" style="width: 10%">9/10</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="70%" style="width: 70%;">
+                            <div class="level-bar-inner" data-level="90%" style="width: 90%;">
                             </div>
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
@@ -517,6 +517,10 @@ p {
                 <div class="item">
                     <span class="skills-title company">Payment Gateways</span>:  
                     <span class="project-tagline">PayPal, CCAvenue, Stripe, Wirecard</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">Security</span>:  
+                    <span class="project-tagline">OWASP, CSRF, XSS, SQL Injection, etc.</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Web Services</span>:  
@@ -679,3 +683,8 @@ jQuery(document).ready(function($) {
 </script>
 </body>
 </html>
+<!-- I am 29 years old Single. Primarily a Php developer, efficient with HTML,JS,CSS,etc.(Full Stack) also. Looking for a job in Europe.
+
+My Nationality is Indian. I am very fluent with English. Hope to hear from you soon.
+
+You can also check my resume here: https://udaykarkera.github.io/myresume.html -->
