new pdf and skills

--- a/myresume.html
+++ b/myresume.html
@@ -520,7 +520,7 @@ p {
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Security</span>:  
-                    <span class="project-tagline">OWASP, CSRF, XSS, SQL Injection, etc.</span>
+                    <span class="project-tagline">OWASP, CSRF, XSS, SQL Injection, Error handling, etc.</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Web Services</span>:  
