--- a/myresume.html
+++ b/myresume.html
@@ -523,6 +523,10 @@ p {
                     <span class="project-tagline">OWASP, CSRF, XSS, SQL Injection, Error handling, etc.</span>
                 </div><!--//item-->
                 <div class="item">
+                    <span class="skills-title company">Design Patterns</span>:  
+                    <span class="project-tagline">Factory, Adapter, Singleton</span>
+                </div><!--//item-->
+                <div class="item">
                     <span class="skills-title company">Web Services</span>:  
                     <span class="project-tagline">SOAP, WSDL, REST</span>
                 </div><!--//item-->
