--- a/myresume.html
+++ b/myresume.html
@@ -536,7 +536,7 @@ p {
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Operating System</span>:  
-                    <span class="project-tagline">Windows, Linux (Ubuntu)</span>
+                    <span class="project-tagline">Windows, Linux</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Development Web Server</span>:  
