--- a/myresume.html
+++ b/myresume.html
@@ -332,7 +332,7 @@ p {
                 <img style="height: 120px;width: 120px;border-radius: 30px;" src="https://udaykarkera.github.io/images/formal-2.jpg">
                 <h4>Uday Karkera</h4>
                 <h3 class="tagline">Full Stack Developer</h3>
-                <h4>5+ Years Exp</h4>
+                <h4>4.7+ Years Exp</h4>
             </div><!--//profile-container-->
 
             <div class="contact-container container-block">
@@ -343,6 +343,7 @@ p {
                     <li class="website"><i class="fa fa-globe"></i><a href="https://udaykarkera.github.io">udaykarkera.github.io</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://in.linkedin.com/in/udaykarkera" target="_blank">linkedin.com/in/udaykarkera</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="https://github.com/udaykarkera" target="_blank">github.com/udaykarkera</a></li>
+                    <li class="github"><i class="fa fa-skype"></i><a href="skype:steviegliv8?call" target="_blank">steviegliv8</a></li>
                     <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/karkera_uday" target="_blank">@karkera_uday</a></li>
                 </ul>
             </div><!--//contact-container-->
@@ -404,7 +405,7 @@ p {
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>Software Engineer with more than 5 years experience, specializing in back end development. Experienced with all stages of the development cycle for dynamic web projects. Look at myself as a Full Stack Developer, well-versed in numerous programming languages and also as time passes wish to be familiar with devops roles.</p>
+                    <p>Software Engineer with more than 4.7 years experience, specializing in back end development. Experienced with all stages of the development cycle for dynamic web projects. Look at myself as a Full Stack Developer, well-versed in numerous programming languages and also as time passes wish to be familiar with devops roles.</p>
                 </div><!--//summary-->
             </section><!--//section-->
             <section class="section experiences-section">
