--- a/myresume.html
+++ b/myresume.html
@@ -332,7 +332,7 @@ p {
                 <img style="height: 120px;width: 120px;border-radius: 30px;" src="https://udaykarkera.github.io/images/formal-2.jpg">
                 <h4>Uday Karkera</h4>
                 <h3 class="tagline">Full Stack Developer</h3>
-                <h4>4.7+ Years Exp</h4>
+                <h4>4.8+ Years Exp</h4>
             </div><!--//profile-container-->
 
             <div class="contact-container container-block">
@@ -405,7 +405,7 @@ p {
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>Software Engineer with more than 4.7 years experience, specializing in back end development. Experienced with all stages of the development cycle for dynamic web projects. Look at myself as a Full Stack Developer, well-versed in numerous programming languages and also as time passes wish to be familiar with devops roles.</p>
+                    <p>Software Engineer with more than 4.8 years experience, specializing in back end development. Experienced with all stages of the development cycle for dynamic web projects. Look at myself as a Full Stack Developer, well-versed in numerous programming languages and also as time passes wish to be familiar with devops roles.</p>
                 </div><!--//summary-->
             </section><!--//section-->
             <section class="section experiences-section">
@@ -525,7 +525,7 @@ p {
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Design Patterns</span>:  
-                    <span class="project-tagline">Factory, Adapter, Singleton</span>
+                    <span class="project-tagline">(Creational) Factory, Singleton | (Behavioral) Strategy | (Structural) Adapter, Composite, Facade</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Web Services</span>:  
@@ -544,8 +544,8 @@ p {
                     <span class="project-tagline">WAMP, XAMPP, LAMP, Vagrant</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Web Hosting</span>:  
-                    <span class="project-tagline">Apache, Nginx</span>
+                    <span class="skills-title company">Web Servers</span>:  
+                    <span class="project-tagline">Apache, Nginx, Node.js</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Version Control System</span>:  
@@ -557,11 +557,11 @@ p {
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Others</span>:
-                    <span class="project-tagline">Bootstrap, JSON, XML, .htaccess, W3C Markup Validation</span>
+                    <span class="project-tagline">Bootstrap, JSON, XML, .htaccess, W3C Markup Validation, Docker</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">IDE / Editor / Tools</span>:  
-                    <span class="project-tagline">diffuse, Csv, Excel, EmEditor, Gearman, Meld, NetBeans, Nano, Notepad++, Postman, Word, Sublime Text, Vim</span>
+                    <span class="project-tagline">diffuse, Csv, Excel, EmEditor, Gearman, Meld, NetBeans, Nano, Notepad++, Postman, Word, Sublime Text, Vim, Visual Studio</span>
                 </div><!--//item-->
             </section><!--//section-->
             <section class="section projects-section">
