--- a/myresume.html
+++ b/myresume.html
@@ -332,14 +332,14 @@ p {
                 <img style="height: 120px;width: 120px;border-radius: 30px;" src="https://udaykarkera.github.io/images/formal-2.jpg">
                 <h4>Uday Karkera</h4>
                 <h3 class="tagline">Full Stack Developer</h3>
-                <h4>4.9+ Years Exp</h4>
+                <h4>4.10+ Years Exp</h4>
             </div><!--//profile-container-->
 
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: uday.karkera@gmail.com">uday.karkera@gmail.com</a></li>
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:+919819131365">+919819131365</a> (Ban)</li>
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:+919821592988">+919821592988</a> (Mum)</li>
+                    <li class="phone"><a href="tel:+919821592988"><i class="fa fa-phone"></i>+91 9821592988</a> (Mum)</li>
+                    <li class="phone"><a href="tel:+919819131365"><i class="fa fa-phone"></i>+91 9819131365</a> (Ban)</li>
                     <li class="website"><i class="fa fa-globe"></i><a href="https://udaykarkera.github.io">udaykarkera.github.io</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://in.linkedin.com/in/udaykarkera" target="_blank">linkedin.com/in/udaykarkera</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="https://github.com/udaykarkera" target="_blank">github.com/udaykarkera</a></li>
@@ -405,7 +405,7 @@ p {
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>Software Engineer with more than 4.9 years experience, specializing in back end development. Experienced with all stages of the development cycle for dynamic web projects. Look at myself as a Full Stack Developer, well-versed in numerous programming languages and also as time passes wish to be familiar with devops roles.</p>
+                    <p>Software Engineer with more than 4.10 years experience, specializing in back end development. Experienced with all stages of the development cycle for dynamic web projects. Look at myself as a Full Stack Developer, well-versed in numerous programming languages and also as time passes wish to be familiar with devops roles.</p>
                 </div><!--//summary-->
             </section><!--//section-->
             <section class="section experiences-section">
