--- a/myresume.html
+++ b/myresume.html
@@ -332,7 +332,7 @@ p {
                 <img style="height: 120px;width: 120px;border-radius: 30px;" src="https://udaykarkera.github.io/images/formal-2.jpg">
                 <h4>Uday Karkera</h4>
                 <h3 class="tagline">Full Stack Developer</h3>
-                <h4>4.10+ Years Exp</h4>
+                <h4>5+ Years Exp</h4>
             </div><!--//profile-container-->
 
             <div class="contact-container container-block">
@@ -405,7 +405,7 @@ p {
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>Software Engineer with more than 4.10 years experience, specializing in back end development. Experienced with all stages of the development cycle for dynamic web projects. Look at myself as a Full Stack Developer, well-versed in numerous programming languages and also as time passes wish to be familiar with devops roles.</p>
+                    <p>Software Engineer with more than 5 years experience, specializing in back end development. Experienced with all stages of the development cycle for dynamic web projects. Look at myself as a Full Stack Developer, well-versed in numerous programming languages and also as time passes wish to be familiar with devops roles.</p>
                 </div><!--//summary-->
             </section><!--//section-->
             <section class="section experiences-section">
@@ -414,7 +414,19 @@ p {
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Senior Software Engineer</h3>
-                            <div class="time">Apr 2018 - Present</div>
+                            <div class="time">Jan 2019 - Present</div>
+                        </div>
+                        <div class="company">Blenheim Chalcot, Mumbai</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>Blenheim Chalcot is the UK’s leading venture builder, investing in high growth sectors like technology and services, eCommerce, edtech, fintech, media and property.</p>
+                    </div><!--//details-->
+                </div><!--//item-->
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Senior Software Engineer</h3>
+                            <div class="time">Apr 2018 - Jan 2019</div>
                         </div>
                         <div class="upper-row">
                             <h3 class="job-title">Software Engineer</h3>
@@ -522,6 +534,10 @@ p {
                 <div class="item">
                     <span class="skills-title company">Security</span>:  
                     <span class="project-tagline">OWASP, CSRF, XSS, SQL Injection, Error handling, etc.</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">Authentication</span>:  
+                    <span class="project-tagline">Http Auth, OAuth2 (Password Grant, Client Credentials)</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Design Patterns</span>:  
