--- a/myresume.html
+++ b/myresume.html
@@ -332,7 +332,7 @@ p {
                 <img style="height: 120px;width: 120px;border-radius: 30px;" src="https://udaykarkera.github.io/images/formal-2.jpg">
                 <h4>Uday Karkera</h4>
                 <h3 class="tagline">Full Stack Developer</h3>
-                <h4>5+ Years Exp</h4>
+                <h4>6+ Years Exp</h4>
             </div><!--//profile-container-->
 
             <div class="contact-container container-block">
@@ -396,7 +396,7 @@ p {
                     <li>DOB: 14<sup>th</sup> Nov, 1988 </li>
                     <li>Nationality: Indian</li>
                     <li>Sex: Male</li>
-                    <li>Marital Status: Unmarried</li>
+                    <li>Marital Status: Single</li>
                 </ul>
             </div>
         </div><!--//sidebar-wrapper-->
@@ -405,7 +405,7 @@ p {
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>Software Engineer with more than 5 years experience, specializing in back end development. Experienced with all stages of the development cycle for dynamic web projects. Look at myself as a Full Stack Developer, well-versed in numerous programming languages and also as time passes wish to be familiar with devops roles.</p>
+                    <p>Software Engineer with more than 6 years experience, specializing in back end development. Experienced with all stages of the development cycle for dynamic web projects. Look at myself as a Full Stack Developer, well-versed in numerous programming languages and also as time passes wish to be familiar with devops roles.</p>
                 </div><!--//summary-->
             </section><!--//section-->
             <section class="section experiences-section">
@@ -510,78 +510,91 @@ p {
                     <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
                 </div> --><!--//intro-->
                 <div class="item">
-                    <span class="skills-title company">Main</span>: <span class="project-tagline">PHP, Git, JavaScript, AJAX, MySQL, HTML5, CSS</span>
+                    <span class="skills-title company">Practices</span>: <span class="project-tagline">OOPs, SOLID Principles, Design Patterns, DB Normalization</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Backend Frameworks</span>: <span class="project-tagline">Laravel, Yii, Slim, CodeIgniter</span>
+                    <span class="skills-title company">PHP Backend Frameworks</span>: <span class="project-tagline">CodeIgniter, Laravel, Yii</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Javascript Frameworks</span>:  
-                    <span class="project-tagline">Jquery<!-- , AngularJS, ReactJS --></span>
+                    <span class="skills-title company">PHP Backend Micro Frameworks</span>: <span class="project-tagline">Lumen, Slim</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Databases</span>:
-                    <span class="project-tagline">MySQL</span>
+                    <span class="skills-title company">PHP Frontend Frameworks / Templating Engines</span>: <span class="project-tagline">Blade, Twig, Mustache</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">PHP Frontend Frameworks / Templating Engines</span>:  
-                    <span class="project-tagline">Blade, Twig</span>
+                    <span class="skills-title company">Javascript Frameworks</span>: <span class="project-tagline">jQuery, React</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Payment Gateways</span>:  
-                    <span class="project-tagline">PayPal, CCAvenue, Stripe, Wirecard</span>
+                    <span class="skills-title company">Databases</span>: <span class="project-tagline">MySQL, PostgreSQL, Redis, MsSQL</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Security</span>:  
-                    <span class="project-tagline">OWASP, CSRF, XSS, SQL Injection, Error handling, etc.</span>
+                    <span class="skills-title company">Security</span>: <span class="project-tagline">OWASP, CSRF, XSS, SQL Injection, Error handling, etc.</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Authentication</span>:  
-                    <span class="project-tagline">Http Auth, OAuth2 (Password Grant, Client Credentials)</span>
+                    <span class="skills-title company">Design Patterns</span>: <span class="project-tagline">(Creational) Factory, Singleton | (Behavioral) Strategy, Command | (Structural) Adapter, Composite, Facade</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Design Patterns</span>:  
-                    <span class="project-tagline">(Creational) Factory, Singleton | (Behavioral) Strategy | (Structural) Adapter, Composite, Facade</span>
+                    <span class="skills-title company">Payment Gateways</span>: <span class="project-tagline">CCAvenue, PayPal, Stripe, Wirecard</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Web Services</span>:  
-                    <span class="project-tagline">SOAP, WSDL, REST</span>
+                    <span class="skills-title company">Web Services</span>: <span class="project-tagline">REST, SOAP, WSDL</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Caching Techniques</span>:  
-                    <span class="project-tagline">APC, Memcache, XCache</span>
+                    <span class="skills-title company">Caching Techniques</span>: <span class="project-tagline">APC, Memcache, XCache</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Operating System</span>:  
-                    <span class="project-tagline">Windows, Linux</span>
+                    <span class="skills-title company">Operating System</span>: <span class="project-tagline">Linux, Windows</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Development Web Server</span>:  
-                    <span class="project-tagline">WAMP, XAMPP, LAMP, Vagrant</span>
+                    <span class="skills-title company">Development Web Server</span>: <span class="project-tagline">LAMP, Vagrant, WAMP, XAMPP</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Web Servers</span>:  
-                    <span class="project-tagline">Apache, Nginx, Node.js</span>
+                    <span class="skills-title company">Web Servers</span>: <span class="project-tagline">Apache, Nginx</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Version Control System</span>:  
-                    <span class="project-tagline">Git</span>
+                    <span class="skills-title company">VCS</span>: <span class="project-tagline">Git</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Methodologies</span>:  
-                    <span class="project-tagline">Agile Scrum</span>
+                    <span class="skills-title company">Others</span>: <span class="project-tagline">AJAX, Bootstrap, JSON, W3C Markup Validation, Docker</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Others</span>:
-                    <span class="project-tagline">Bootstrap, JSON, XML, .htaccess, W3C Markup Validation, Docker</span>
+                    <span class="skills-title company">Methodologies</span>: <span class="project-tagline">Agile Scrum, Kanban</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">IDE / Editor / Tools</span>:  
-                    <span class="project-tagline">diffuse, Csv, Excel, EmEditor, Gearman, Meld, NetBeans, Nano, Notepad++, Postman, Word, Sublime Text, Vim, Visual Studio</span>
+                    <span class="skills-title company">Authentication</span>: <span class="project-tagline">OAuth2 (Password Grant, Client Credentials), JWT, Http Auth</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">Push Notifications</span>: <span class="project-tagline">PushBots</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">API Development Environment</span>: <span class="project-tagline">Postman, RESTClient</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">IDE / Editor</span>: <span class="project-tagline">EmEditor, NetBeans, Nano, Notepad++, Sublime Text, Vim, Visual Studio, PhpStorm</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">Push Notifications</span>: <span class="project-tagline">PushBots</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">DB Tools</span>: <span class="project-tagline">phpMyAdmin, DBeaver</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">Tools</span>: <span class="project-tagline">JIRA, diffuse, Csv, Excel, Gearman, Meld, Word, Xdebug (PhpStorm), PHP-DI</span>
                 </div><!--//item-->
             </section><!--//section-->
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
+                <div class="company">Blenheim Chalcot IT Services India Pvt. Ltd., Mumbai</div>
+                <div class="item">
+                    <span class="project-title"><a href="https://platinumclubnet.com/" target="_blank">Avado</a></span>:
+                    <span class="project-tagline">AVADO Learning is a web and mobile-based platform that offers e-learning courses on marketing, human resource, accounting and leadership management. AVADO's headquarters is located in London.</span>
+                    <ul>
+                        <li>Maitainance &amp; Optimistation of the CMS and Apis</li>
+                        <li>Implement Laravel features.</li>
+                        <li>Monitoring technical aspects of Avado</li>
+                        <li>Scoping, Class Mapping, Code Reviews, Conducting Interviews</li>
+                    </ul>
+                </div><!--//item-->
                 <div class="company">MobiCom Technologies Pvt Ltd, Bengaluru</div>
                 <div class="item">
                     <span class="project-title"><a href="https://platinumclubnet.com/" target="_blank">PlatinumClubNet</a></span>:
