Add psmi certificate, img and update resume

--- a/myresume.html
+++ b/myresume.html
@@ -412,8 +412,12 @@ p {
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
+                            <h3 class="job-title">Senior Software Engineer | Scrum Master</h3>
+                            <div class="time">Jul 2019 - Present</div>
+                        </div>
+                        <div class="upper-row">
                             <h3 class="job-title">Senior Software Engineer</h3>
-                            <div class="time">Jan 2019 - Present</div>
+                            <div class="time">Jan 2019 - Jul 2019</div>
                         </div>
                         <div class="company">Blenheim Chalcot, Mumbai</div>
                     </div><!--//meta-->
@@ -471,7 +475,7 @@ p {
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
                     <div class="item">
-                        <h3 class="level-title">Javascript &amp; jQuery</h3><h3 class="level-title" style="width: 10%">7.5/10</h3>
+                        <h3 class="level-title">Javascript</h3><h3 class="level-title" style="width: 10%">7.5/10</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="75%" style="width: 75%;">
                             </div>                                      
